test/fails/bad_types/mat_norm.lgl
mat2x2 m = [[2., 3.], [3., 2.]]:mat2x2;
print (norm m);